Fix pagination mobile styling

--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -88,6 +88,7 @@
 .page-active-btn {
     font-size: 15px;
     padding: 5px 9px;
+    font-weight: bold;
     background-color: #F9FAFB;
     /* background-color: red; */
     border-radius: 20px;
@@ -194,6 +195,38 @@
 
     .modal-input-ctn {
         display: block;
+    }
+}
+
+@media (max-width:600px){
+    
+.pagination-area{
+    margin: 0 -1rem;
+}
+
+    .page-number-btn:hover {
+        transform: scale(1.1);
+    }
+    
+    .page-btn {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        padding: 3px;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        font-size: 13px;
+        color: #475467;
+    }
+
+    .page-number-btn{
+        font-size: 13px;
+        padding: 4px;
+    }
+
+    .page-btn svg {
+        margin: 0 2px;
     }
 }
 
